--- a/princess.css
+++ b/princess.css
@@ -27,7 +27,7 @@ border-color: #666666;
 border-radius: 5px;
 padding-right: 20px;
 padding-left: 20px;}
-body {background-image:: url(night.jpg);}
+body {background-image: url(night.jpg);}
 .p2{width: 960px;
  margin-left: auto;
  margin-right: auto;
